# numpy-int-ops

./: .gitignore  .gitmodules  LICENSE  README.md  setup.py
benchmark/: benchmark.py  benchmark_cpu.py  matmatmul.py  requirements.txt
cpu/: README.md  setup.py
cpu/int_ops/: CMakeLists.txt  Containerfile  container_build_onednn.sh  container_install_onednn.sh
cpu/int_ops/src/main/: matmul.cc
cpu/int_ops/src/test/: test_matmul.cc
cpu/numpy_int_ops_cpu/: helpers.py  ops.py
numpy_int_ops/: ops.py
onednn_int_ops/: container_build_onednn.sh  container_install_onednn.sh
onednn_int_ops/src/main/: matmul.cc  matmul.h
onednn_int_ops/src/test/: test_matmul.cc
